--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,23 @@
 [tool.poetry]
 name = "reez"
 version = "0.1.0"
-description = "pendaftaran pemeriksaan bagi unit radiologi kk"
+description = "X-Ray Registration System"
 authors = ["resakse <resakse@gmail.com>"]
-license = "mit"
-readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-Django = "^4.2.5"
+python = "^3.10"
+Django = "^4.2.6"
 django-debug-toolbar = "^4.2.0"
-django-htmx = "^1.16.0"
 django-crispy-forms = "^2.0"
-django-filter = "^23.2"
-
-[tool.poetry.group.dev.dependencies]
-crispy-bootstrap5 = "^0.7"
+django-filter = "^23.3"
 django-extensions = "^3.2.3"
-django-jet-reboot = "^1.3.3"
+django-htmx = "^1.17.0"
+crispy-bootstrap5 = "^0.7"
+django-auto-prefetch = "^1.8.0"
+django-ordered-model = "^3.7.4"
+
+[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
