--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ django-htmx = "^1.17.0"
 crispy-bootstrap5 = "^0.7"
 django-auto-prefetch = "^1.8.0"
 django-ordered-model = "^3.7.4"
+openpyxl = "^3.1.2"
+fontawesomefree = "^6.4.2"
 
 [tool.poetry.dev-dependencies]
 
