--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ django-ordered-model = "^3.7.4"
 openpyxl = "^3.1.2"
 slippers = "^0.6.2"
 crispy-bootstrap4 = "^2023.1"
+django-login-required-middleware = "^0.9.0"
+pandas = "^2.1.4"
 
 [tool.poetry.dev-dependencies]
 
