--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ slippers = "^0.6.2"
 crispy-bootstrap4 = "^2023.1"
 django-login-required-middleware = "^0.9.0"
 pandas = "^2.1.4"
+requests = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 
