--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ crispy-bootstrap4 = "^2023.1"
 django-login-required-middleware = "^0.9.0"
 pandas = "^2.1.4"
 requests = "^2.31.0"
+djangorestframework = "^3.16.0"
+djangorestframework-simplejwt = "^5.5.1"
+django-cors-headers = "^4.7.0"
 
 [tool.poetry.dev-dependencies]
 
