--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "lucide-react": "^0.525.0",
     "next-auth": "^4.24.11",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
