--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ requests = "^2.31.0"
 djangorestframework = "^3.16.0"
 djangorestframework-simplejwt = "^5.5.1"
 django-cors-headers = "^4.7.0"
+pydicom = "^3.0.1"
+pynetdicom = "^3.0.3"
 
 [tool.poetry.dev-dependencies]
 
