--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@cornerstonejs/core": "^3.31.14",
+    "@cornerstonejs/dicom-image-loader": "^3.31.14",
+    "@cornerstonejs/tools": "^3.31.14",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -21,22 +24,25 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cornerstone-core": "^2.6.1",
-    "cornerstone-tools": "^6.0.10",
-    "cornerstone-wado-image-loader": "^4.13.2",
-    "dicom-parser": "^1.8.21",
-    "hammerjs": "^2.0.8",
+    "crypto-browserify": "^3.12.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "next-themes": "^0.4.6",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.6",
+    "stream-browserify": "^3.0.0",
+    "string-replace-loader": "^3.2.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "url": "^0.11.4",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -46,6 +52,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "null-loader": "^4.0.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
