feat: add DICOM upload functionality and sidebar link
- Added a new upload page for DICOM images with a detailed upload process.
- Implemented DicomUpload component to handle file selection, metadata extraction, and upload progress.
- Integrated patient and ward selection with auto-creation from DICOM metadata.
- Updated Sidebar component to include a link to the new upload page.
- Enhanced SimpleDicomViewer for better image fitting and rendering.
- Added react-select for improved patient selection UI.

--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -37,6 +37,7 @@
     "querystring-es3": "^0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "sonner": "^2.0.6",
     "stream-browserify": "^3.0.0",
     "string-replace-loader": "^3.2.0",
