--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -41,6 +41,7 @@
     "sonner": "^2.0.6",
     "stream-browserify": "^3.0.0",
     "string-replace-loader": "^3.2.0",
+    "sweetalert2": "^11.22.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "url": "^0.11.4",
