--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -38,6 +38,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-select": "^5.10.2",
+    "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "stream-browserify": "^3.0.0",
     "string-replace-loader": "^3.2.0",
