feat: Integrate WebSocket support for live dashboard updates
- Added channels and daphne dependencies to pyproject.toml.
- Modified asgi.py to route WebSocket connections for dashboard updates.
- Updated settings.py to include channels and configure ASGI application.
- Implemented DashboardConsumer for handling WebSocket connections and sending live updates for system resources and storage info.
- Created runserver_ws management command to run the server with WebSocket support using Daphne.
- Defined routing for WebSocket connections in routing.py.
- Refactored frontend Dashboard component to utilize memoization and handle live updates via WebSocket.
- Enhanced chart components with memoization to prevent unnecessary re-renders.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,12 @@ djangorestframework-simplejwt = "^5.5.1"
 django-cors-headers = "^4.7.0"
 pydicom = "^3.0.1"
 pynetdicom = "^3.0.3"
+channels = "^4.3.0"
+channels-redis = "^4.3.0"
+psutil = "^7.0.0"
+daphne = "^4.2.1"
+cryptography = "<42"
+pyopenssl = ">=23.0.0"
 
 [tool.poetry.dev-dependencies]
 
