--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -25,10 +25,12 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@types/flatpickr": "^3.0.2",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
+    "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
