--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -39,6 +39,7 @@
     "querystring-es3": "^0.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-flatpickr": "^4.0.11",
     "react-select": "^5.10.2",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
