--- a/ris-frontend/package.json
+++ b/ris-frontend/package.json
@@ -34,6 +34,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "crypto-browserify": "^3.12.1",
+    "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
@@ -42,6 +43,7 @@
     "process": "^0.11.10",
     "querystring-es3": "^0.2.1",
     "react": "19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "19.1.0",
     "react-flatpickr": "^4.0.11",
     "react-select": "^5.10.2",
